input: increase raise timeout for drag and drop to 1s

This should be long enough to not happen accidentally, but short enough to not be
annoying and discoverable.

BUG: 480511